Upload GBTM R script

--- a/Programs/Preprocessing.ipynb
+++ b/Programs/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'C:\\\\Users\\\\yche465\\\\Desktop\\\\AIM 1\\\\Codes\\\\PrEP-Traj-Clustering'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,17 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import raw dataset\n",
-    "data=pd.read_sas(\"syndata_3000.sas7bdat\").astype({'ID':'int'})"
+    "data=pd.read_csv(\"syndata_3000.csv\").astype({'ID':'int'})\n",
+    "data['PrEP_Start']= pd.to_datetime(data['PrEP_Start'])\n",
+    "data['PrEP_End']= pd.to_datetime(data['PrEP_End'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,17 +85,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PID</th>\n",
+       "      <th>PrEP_start_days</th>\n",
+       "      <th>PrEP_end_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>207</td>\n",
+       "      <td>0</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>351</td>\n",
+       "      <td>0</td>\n",
+       "      <td>432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>399</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>553</td>\n",
+       "      <td>0</td>\n",
+       "      <td>645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4570</th>\n",
+       "      <td>191726</td>\n",
+       "      <td>0</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4571</th>\n",
+       "      <td>191728</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4572</th>\n",
+       "      <td>191880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4573</th>\n",
+       "      <td>191904</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4574</th>\n",
+       "      <td>191911</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4575 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         PID  PrEP_start_days  PrEP_end_days\n",
+       "0        207                0             79\n",
+       "1        351                0            432\n",
+       "2        399                0             69\n",
+       "3        500                0            664\n",
+       "4        553                0            645\n",
+       "...      ...              ...            ...\n",
+       "4570  191726                0             94\n",
+       "4571  191728                0             96\n",
+       "4572  191880                0            154\n",
+       "4573  191904                0             67\n",
+       "4574  191911                0             74\n",
+       "\n",
+       "[4575 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#test=fdata.groupby('PID').size()\n",
-    "#test[test>3]"
+    "fdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,15 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Export sero-protection matrix\n",
     "f= open(\"SeroProtect.txt\",\"w+\")\n",
     "for i in range(len(SeroProtect_indexed)):\n",
-    "    for j in range(103):\n",
-    "        if j == 102:\n",
+    "    for j in range(104):\n",
+    "        if j == 103:\n",
     "            f.write(\"%s\\n\" % (SeroProtect_indexed[i][j]))\n",
     "        else:\n",
     "            f.write(\"%s,\" % (SeroProtect_indexed[i][j]))\n",
