--- a/Programs/Preprocessing.ipynb
+++ b/Programs/Preprocessing.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\yche465\\\\Desktop\\\\AIM 1\\\\Codes\\\\PrEP-Traj-Clustering'"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sys, os, shutil\n",
@@ -29,11 +18,29 @@
     "import matplotlib\n",
     "import seaborn as sns\n",
     "import copy as cp\n",
-    "\n",
+    "import pyprojroot as pr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\yche465\\\\Desktop\\\\AIM 1\\\\Codes\\\\PrEP-Traj-Clustering\\\\Data'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#Change directory\n",
-    "os.chdir(\"C:/Users/yche465/Desktop/AIM 1/Codes/PrEP-Traj-Clustering\")\n",
-    "os.getcwd()\n",
-    "\n"
+    "os.chdir(pr.here(\"./Data\"))\n",
+    "os.getcwd()"
    ]
   },
   {
@@ -45,17 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import raw dataset\n",
-    "data=pd.read_csv(\"syndata_3000.csv\").astype({'ID':'int'})\n"
+    "data=pd.read_csv(\"syndata_13k.csv\").astype({'ID':'int'})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -89,27 +96,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>351</td>\n",
-       "      <td>10/13/2023</td>\n",
-       "      <td>12/18/2024</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10/25/2023</td>\n",
+       "      <td>01/11/2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>399</td>\n",
-       "      <td>02/23/2023</td>\n",
-       "      <td>05/03/2023</td>\n",
+       "      <td>20</td>\n",
+       "      <td>05/17/2024</td>\n",
+       "      <td>06/26/2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>500</td>\n",
-       "      <td>07/15/2023</td>\n",
-       "      <td>05/09/2025</td>\n",
+       "      <td>93</td>\n",
+       "      <td>03/25/2023</td>\n",
+       "      <td>10/26/2023</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>553</td>\n",
-       "      <td>01/28/2023</td>\n",
-       "      <td>11/03/2024</td>\n",
+       "      <td>102</td>\n",
+       "      <td>12/22/2023</td>\n",
+       "      <td>05/06/2024</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -117,13 +124,13 @@
       ],
       "text/plain": [
        "    ID  PrEP_Start    PrEP_End\n",
-       "1  351  10/13/2023  12/18/2024\n",
-       "2  399  02/23/2023  05/03/2023\n",
-       "3  500  07/15/2023  05/09/2025\n",
-       "4  553  01/28/2023  11/03/2024"
+       "1   20  10/25/2023  01/11/2024\n",
+       "2   20  05/17/2024  06/26/2024\n",
+       "3   93  03/25/2023  10/26/2023\n",
+       "4  102  12/22/2023  05/06/2024"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,22 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Change directory to the export folder\n",
-    "os.chdir(\"C:/Users/yche465/Desktop/AIM 1/Codes/PrEP-Traj-Clustering/Export\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Export PMC matrix\n",
-    "f= open(\"PMC.txt\",\"w+\")\n",
+    "f= open(\"PMC_13k.txt\",\"w+\")\n",
     "for i in range(len(PMC)):\n",
     "    for j in range(103):\n",
     "        if j == 102:\n",
@@ -284,12 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Export sero-protection matrix\n",
-    "f= open(\"SeroProtect.txt\",\"w+\")\n",
+    "f= open(\"SeroProtect_13k.txt\",\"w+\")\n",
     "for i in range(len(SeroProtect_indexed)):\n",
     "    for j in range(104):\n",
     "        if j == 103:\n",
@@ -297,153 +294,6 @@
     "        else:\n",
     "            f.write(\"%s,\" % (SeroProtect_indexed[i][j]))\n",
     "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Prepare data for describing the PrEP use trend\n",
-    "\n",
-    "Create a data matrix object with the following two fields: 1) the total duration spent in suboptimal sero-protection; 2) the number of the number of PrEP protection interval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Import PMC and SeroProtect matrices\n",
-    "PMC = np.loadtxt('PMC.txt', usecols=range(103), delimiter=\",\")\n",
-    "SeroProtect = np.loadtxt('SeroProtect.txt', usecols=range(103), delimiter=\",\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the matrix of suboptimal sero-protection (i.e., PMC<0.57)\n",
-    "SubProtect=PMC<4/7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create the following time series arrays:\n",
-    "## possible PrEP cessation start time (in week)\n",
-    "## possible PrEP cessation end time (in week)\n",
-    "## possible PrEP use interval start time (in week)\n",
-    "## possible PrEP use iterval end time (in week)\n",
-    "CESS_START=[]\n",
-    "CESS_END=[]\n",
-    "PrEP_START=[]\n",
-    "PrEP_END=[]\n",
-    "\n",
-    "for k in range(len(SubProtect)):\n",
-    "    cess_start=[]\n",
-    "    prep_start=[0]\n",
-    "    cess_end=[]\n",
-    "    prep_end=[]\n",
-    "    for i in range(1,103):\n",
-    "        if SubProtect[k][i]==True and SubProtect[k][i-1]==False:\n",
-    "            cess_start.append(i)\n",
-    "            prep_end.append(i)\n",
-    "            \n",
-    "        elif SubProtect[k][i]==False and SubProtect[k][i-1]==True:\n",
-    "            cess_end.append(i)\n",
-    "            prep_start.append(i)\n",
-    "            \n",
-    "    CESS_START.append(cess_start)\n",
-    "    PrEP_START.append(prep_start)\n",
-    "    CESS_END.append(cess_end)\n",
-    "    PrEP_END.append(prep_end)\n",
-    "\n",
-    "#set the Week 103 as the end point of any unclosed PrEP use interval \n",
-    "for i in range(len(SubProtect)):\n",
-    "    if len(PrEP_START[i])>len(PrEP_END[i]):\n",
-    "        PrEP_END[i].append(103)\n",
-    "\n",
-    "for i in range(len(SubProtect)):   \n",
-    "    #if more cessation start date than end date, then set the Week 103 as the end point of any unclosed \n",
-    "    #cessation interval \n",
-    "    if len(CESS_START[i])>len(CESS_END[i]):\n",
-    "        CESS_END[i].append(103)\n",
-    "    #else if more cessation end date than start date, then set the Week 0 as the start point of \n",
-    "    #any unclosed cessation interval \n",
-    "    elif len(CESS_START[i])<len(CESS_END[i]):\n",
-    "        CESS_START[i].insert(0,0)\n",
-    "    #else if equal number of cessation start and end dates & the first end date predate the first start date \n",
-    "    # then add Week 0 as the first start date and Week 103 as the last end date\n",
-    "    elif len(CESS_START[i])==len(CESS_END[i]) and len(CESS_START[i])>0 and CESS_START[i][0]>CESS_END[i][0]:\n",
-    "        START_WEEK_TOT[i].insert(0,0)\n",
-    "        END_WEEK_TOT[i].append(103)\n",
-    "    #else if it is cessation all the way through the entire follow-up period (i.e., no initial start and end dates \n",
-    "    #but sero-protect time series is >0) then add Week 0 and 103 as the start and end dates, respectively\n",
-    "    elif len(CESS_START[i])==0 and len(CESS_START[i])==0 and sum(SeroProtect[i])>0:\n",
-    "        CESS_START[i].insert(0,0)\n",
-    "        CESS_END[i].append(103)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create list object: the total duration spent in sub-optimal sero-protection \n",
-    "Total_SubP_Dur=np.array([sum(SubProtect[i]) for i in range(len(SubProtect))])\n",
-    "#Create list object: the number of the number of sero-protection interval\n",
-    "Num_Protect_Int=np.array([len(PrEP_START[i]) for i in range(len(SubProtect))])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66.17166666666667\n",
-      "1.5203333333333333\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Average duration spent in sub-optimal sero-protection\n",
-    "print(np.mean(Total_SubP_Dur))\n",
-    "#Average number of PrEP protection interval \n",
-    "print(np.mean(Num_Protect_Int))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from sklearn import preprocessing as prep\n",
-    "##Sample dataset\n",
-    "#Descriptive=np.dstack((Total_SubP_Dur,Num_Protect_Int))[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import pickle\n",
-    "#pickle_out=open(\"Descriptive\",\"wb\")\n",
-    "#pickle.dump(Descriptive,pickle_out)\n",
-    "#pickle_out.close()"
    ]
   }
  ],
