minor fix on grammar

--- a/Programs/Descriptive_Stats_Orig.ipynb
+++ b/Programs/Descriptive_Stats_Orig.ipynb
@@ -939,7 +939,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Export descriptive statistics (original data)\n",
+    "#Export descriptive statistics (original data) and other useful objects\n",
     "os.chdir(pr.here(\"./Export\"))\n",
     "Descript_orig={\"Univ. Continuous\":univar_cont_orig, \n",
     "               \"Univ. Categorical\":univar_cat_orig, \n",
