convert NA to 0 for PrEP provider density variable

--- a/Programs/1_Preprocessing.ipynb
+++ b/Programs/1_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "'C:\\\\Users\\\\yche465\\\\Desktop\\\\AIM 1\\\\Codes\\\\PrEP-Traj-Clustering\\\\Data'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -130,7 +130,7 @@
        "4  102  12/22/2023  05/06/2024"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
-      "<class 'pandas._libs.tslibs.timestamps.Timestamp'>\n"
+      "<class 'str'>\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +202,147 @@
     "data2=data.merge(startdate, on=\"ID\",how='left')\n",
     "#rename ID variable\n",
     "fdata=data2.rename(columns={'ID':'PID'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PID</th>\n",
+       "      <th>PrEP_Start</th>\n",
+       "      <th>PrEP_End</th>\n",
+       "      <th>Initiation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20</td>\n",
+       "      <td>02/26/2023</td>\n",
+       "      <td>05/16/2023</td>\n",
+       "      <td>02/26/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20</td>\n",
+       "      <td>10/25/2023</td>\n",
+       "      <td>01/11/2024</td>\n",
+       "      <td>02/26/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>05/17/2024</td>\n",
+       "      <td>06/26/2024</td>\n",
+       "      <td>02/26/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93</td>\n",
+       "      <td>03/25/2023</td>\n",
+       "      <td>10/26/2023</td>\n",
+       "      <td>03/25/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>102</td>\n",
+       "      <td>12/22/2023</td>\n",
+       "      <td>05/06/2024</td>\n",
+       "      <td>03/06/2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19792</th>\n",
+       "      <td>191919</td>\n",
+       "      <td>11/14/2023</td>\n",
+       "      <td>04/07/2024</td>\n",
+       "      <td>11/14/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19793</th>\n",
+       "      <td>191934</td>\n",
+       "      <td>08/21/2023</td>\n",
+       "      <td>01/14/2024</td>\n",
+       "      <td>08/21/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19794</th>\n",
+       "      <td>191941</td>\n",
+       "      <td>02/05/2023</td>\n",
+       "      <td>06/28/2023</td>\n",
+       "      <td>02/05/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19795</th>\n",
+       "      <td>191955</td>\n",
+       "      <td>08/11/2023</td>\n",
+       "      <td>10/20/2023</td>\n",
+       "      <td>08/11/2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19796</th>\n",
+       "      <td>191995</td>\n",
+       "      <td>08/22/2023</td>\n",
+       "      <td>10/28/2023</td>\n",
+       "      <td>08/22/2023</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19797 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          PID  PrEP_Start    PrEP_End  Initiation\n",
+       "0          20  02/26/2023  05/16/2023  02/26/2023\n",
+       "1          20  10/25/2023  01/11/2024  02/26/2023\n",
+       "2          20  05/17/2024  06/26/2024  02/26/2023\n",
+       "3          93  03/25/2023  10/26/2023  03/25/2023\n",
+       "4         102  12/22/2023  05/06/2024  03/06/2025\n",
+       "...       ...         ...         ...         ...\n",
+       "19792  191919  11/14/2023  04/07/2024  11/14/2023\n",
+       "19793  191934  08/21/2023  01/14/2024  08/21/2023\n",
+       "19794  191941  02/05/2023  06/28/2023  02/05/2023\n",
+       "19795  191955  08/11/2023  10/20/2023  08/11/2023\n",
+       "19796  191995  08/22/2023  10/28/2023  08/22/2023\n",
+       "\n",
+       "[19797 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fdata"
    ]
   },
   {
